--- a/challenge-3.html
+++ b/challenge-3.html
@@ -25,7 +25,7 @@
 
 		<p>
 			<label for="kilometers">Kilometers:</label>
-			<input type="text" id="kilometers" />
+			<input type="number" id="kilometers" />
 			<button type="button" id="calculate">Calculate</button>
 		</p>
 		<pre id="output-container"></pre>
