--- a/challenge-5.html
+++ b/challenge-5.html
@@ -25,6 +25,10 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<input type="number" id="input" />
+		<button type="button" id="Push">Push</button>
+		<button type="button" id="Calculate">reverses</button>
 
 		<script src="scripts/challenge-5.js" defer></script>
 	</body>
