--- a/challenge-4.html
+++ b/challenge-4.html
@@ -27,6 +27,10 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<input type="number" id="input" />
+		<button type="button" id="Push">Push</button>
+		<button type="button" id="Calculate">Calculate</button>
 
 		<script src="scripts/challenge-4.js" defer></script>
 	</body>
