--- a/challenge-6.html
+++ b/challenge-6.html
@@ -18,6 +18,10 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<input type="number" id="input" />
+		<button type="button" id="Push">Push</button>
+		<button type="button" id="Calculate">Sort</button>
 
 		<script src="scripts/challenge-6.js" defer></script>
 	</body>
