--- a/challenge-7.html
+++ b/challenge-7.html
@@ -19,6 +19,10 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<input type="number" id="input" />
+		<button type="button" id="Push">Push</button>
+		<button type="button" id="Calculate">filter</button>
 
 		<script src="scripts/challenge-7.js" defer></script>
 	</body>
