--- a/challenge-10.html
+++ b/challenge-10.html
@@ -21,6 +21,8 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<input type="text" id="input" />
+		<button type="button" id="Push">Count</button>
 
 		<script src="scripts/challenge-10.js" defer></script>
 	</body>
