--- a/challenge-8.html
+++ b/challenge-8.html
@@ -20,6 +20,10 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<input type="text" id="input" />
+		<button type="button" id="Push">Push</button>
+		<button type="button" id="why?">Why?</button>
 
 		<script src="scripts/challenge-8.js" defer></script>
 	</body>
