--- a/challenge-9.html
+++ b/challenge-9.html
@@ -19,6 +19,12 @@
 		<hr />
 
 		<pre id="output-container"></pre>
+		<pre id="output-container2"></pre>
+		<label for="input">What to Divide:</label>
+		<input type="number" id="input" />
+		<label for="input2">Divided by:</label>
+		<input type="number" id="input2" />
+		<button type="button" id="Calculate">Divide</button>
 
 		<script src="scripts/challenge-9.js" defer></script>
 	</body>
